[package]
name = "kubectl-secret"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
k8s-openapi = { version = "0.20.0", features = ["v1_27"]}
kube = { version = "0.86", default-features = false, features = ["client", "rustls-tls"] }
owo-colors = "3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["full"] }
